--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/local-optimum/solana-offgrid-relay#readme",
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
-    "fs": "^0.0.1-security"
+    "bs58": "^6.0.0",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1"
   }
 }
